--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,10 @@
 .env.test.local
 .env.production.local
 
+# Игнорирование конкретных PDF-файлов
+/src/Assets/CV_Koshelenko.pdf
+/src/Assets/Koshelenko.pdf
+
 .pdf
 
 npm-debug.log*
