--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -1,12 +1,11 @@
-# k8s/ingress.yaml
+# ingress.yaml
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: devopsdive
   annotations:
-    kubernetes.io/ingress.class: "nginx"
+    kubernetes.io/ingress.class: nginx
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
-    acme.cert-manager.io/http01-edit-in-place: "true"
 spec:
   tls:
   - hosts:
@@ -15,16 +14,6 @@ spec:
     secretName: devopsdive-tls
   rules:
   - host: devopsdive.com
-    http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: devopsdive
-            port:
-              number: 80
-  - host: www.devopsdive.com
     http:
       paths:
       - path: /
