--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,9 +1,10 @@
-# k8s/service.yaml
+# service.yaml
 apiVersion: v1
 kind: Service
 metadata:
   name: devopsdive
 spec:
+  type: NodePort
   ports:
   - port: 80
     targetPort: 80
